force-app/main/default/objects/Account/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>A unique code for the educational institution, campus and department.</description>
    <inlineHelpText>A unique code for the educational institution, campus and department.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>