force-app/main/default/objects/Account/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The Educational Institution&apos;s Operation End Time</description>
    <inlineHelpText>The Educational Institution&apos;s Operation End Time</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>