force-app/main/default/objects/Account/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The Educational Institution&apos;s Operation Start Time</description>
    <inlineHelpText>The Educational Institution&apos;s Operation Start Time</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>