force-app/main/default/objects/Account/recordTypes/Administrative.recordType-meta.xml
<RecordType>
    <fullName>Administrative</fullName>
    <active>true</active>
    <description>Household or individual administrative account</description>
    <label>Administrative</label>
</RecordType>