force-app/main/default/objects/Account/recordTypes/Campus.recordType-meta.xml
<RecordType>
    <fullName>Campus</fullName>
    <active>true</active>
    <description>Campus location of an educational institution</description>
    <label>Campus</label>
</RecordType>