force-app/main/default/objects/Account/recordTypes/Department.recordType-meta.xml
<RecordType>
    <fullName>Department</fullName>
    <active>true</active>
    <description>Department of an educational institution</description>
    <label>Department</label>
</RecordType>