force-app/main/default/objects/Account/recordTypes/External_Educational_Institution.recordType-meta.xml
<RecordType>
    <fullName>External_Educational_Institution</fullName>
    <active>true</active>
    <description>Partner/Affiliate institution of an educational institution</description>
    <label>External Educational Institution</label>
</RecordType>