force-app/main/default/objects/Account/validationRules/Required_Campus_Timezone.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Campus_Timezone</fullName>
    <active>true</active>
    <description>To ensure timezone is populated for campus account.</description>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Campus&apos; &amp;&amp; ISBLANK( TEXT(Timezone__c) )</errorConditionFormula>
    <errorDisplayField>Timezone__c</errorDisplayField>
    <errorMessage>The timezone is required.</errorMessage>
</ValidationRule>