force-app/main/default/objects/Account/listViews/All_Administrative_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Administrative_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Administrative</value>
    </filters>
    <label>All Administrative Accounts</label>
</ListView>