force-app/main/default/objects/Account/listViews/All_Campuses.listView-meta.xml
<ListView>
    <fullName>All_Campuses</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Timezone__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Campus</value>
    </filters>
    <label>All Campuses</label>
</ListView>