force-app/main/default/objects/Account/listViews/All_Departments.listView-meta.xml
<ListView>
    <fullName>All_Departments</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Department</value>
    </filters>
    <label>All Departments</label>
</ListView>