force-app/main/default/objects/Account/listViews/All_Educational_Institutions.listView-meta.xml
<ListView>
    <fullName>All_Educational_Institutions</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Educational_Institution</value>
    </filters>
    <label>All Educational Institutions</label>
</ListView>