force-app/main/default/objects/Account/listViews/All_External_Educational_Institutions.listView-meta.xml
<ListView>
    <fullName>All_External_Educational_Institutions</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.External_Educational_Institution</value>
    </filters>
    <label>All External Educational Institutions</label>
</ListView>